deployments/k8s/k8s-dpl-tasks-svc-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasks-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tasks-svc
  template:
    metadata:
      labels:
        app: tasks-svc
    spec:
      containers:
        - name: tasks-svc
#          image: services/tasks:latest  # Убедитесь, что ваш образ доступен в вашем репозитории
          image: sirdaukar/hse_wishlist:latest
          ports:
            - containerPort: 8082
          volumeMounts:
            - name: migrations-data
              mountPath: /services/tasks/migrations
      depends_on:
        - name: postgres
          condition: service-healthy
      volumes:
        - name: migrations-data
          emptyDir: {}
