deployments/k8s/otel-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otel-collector
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: otel-collector
  template:
    metadata:
      labels:
        app: otel-collector
    spec:
      containers:
        - name: otel-collector
          image: otel/opentelemetry-collector:latest
          command:
            - "/usr/local/bin/otel-collector"
            - "--config=/etc/otel/otel-collector-config.yaml"
          ports:
            - containerPort: 1888
              name: pprof
            - containerPort: 8888
              name: prom-metrics
            - containerPort: 8889
              name: exp-metrics
            - containerPort: 13133
              name: health-check
            - containerPort: 4317
              name: otlp-grpc
            - containerPort: 55679
              name: zpages
          volumeMounts:
            - name: config-volume
              mountPath: /etc/otel
      volumes:
        - name: config-volume
          configMap:
            name: otel-config
