deployments/k8s/k8s-postgres-config.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5436
      targetPort: 5432
  type: NodePort
  nodePort: 30002  # Выберите свободный NodePort
