deployments/k8s/k8s-service-tasks-svc-config.yaml
apiVersion: v1
kind: Service
metadata:
  name: tasks-svc
spec:
  selector:
    app: tasks-svc
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
  type: NodePort
