deployments/k8s/otel-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otel-collector
  namespace: monitoring
spec:
  selector:
    app: otel-collector
  ports:
    - protocol: TCP
      port: 1888
      targetPort: 1888
      name: pprof
    - protocol: TCP
      port: 8888
      targetPort: 8888
      name: prometheus-metrics
    - protocol: TCP
      port: 8889
      targetPort: 8889
      name: exporter-metrics
    - protocol: TCP
      port: 13133
      targetPort: 13133
      name: health-check
    - protocol: TCP
      port: 4317
      targetPort: 4317
      name: otlp-grpc
    - protocol: TCP
      port: 55679
      targetPort: 55679
      name: zpages
  type: ClusterIP
