deployments/k8s/tasks-svc-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tasks-svc-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: tasks-svc.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tasks-svc
                port:
                  number: 8082
